# post-anything

./: .dockerignore  .editorconfig  .env.local  .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-image-push.yml  python-app.yml  python-application-tests.yml
src/: lib.py  main.py
src/tests/: env.py  fixtures.py  test_lib.py
