[tool.poetry]
name = "generic-rest-api-example"
version = "0.1.0"
description = "Example of a containerized API endpoint."
authors = ["Florian Salihovic <florian.salihovic@me.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.65.1"
uvicorn = "^0.14.0"
pymongo = "^3.11.4"

[tool.poetry.dev-dependencies]
black = "^21.5b1"
flake8 = "^3.9.2"
pre-commit = "^2.13.0"
isort = "^5.8.0"
pytest = "^6.2.4"
testcontainers = { extras = ["mongodb"], version = "^3.4.0" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
